<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.queritylib</groupId>
  <artifactId>querity-parent</artifactId>
  <version>3.5.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Querity</name>
  <description>Open-source Java query builder for SQL and NoSQL.</description>

  <inceptionYear>2021</inceptionYear>
  <url>https://github.com/queritylib/querity</url>

  <developers>
    <developer>
      <name>Bruno Mendola</name>
      <url>http://www.brunomendola.net</url>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://github.com/queritylib/querity/blob/main/LICENSE</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/queritylib/querity/issues</url>
  </issueManagement>

  <scm>
    <url>https://github.com/queritylib/querity</url>
    <connection>scm:git:https://github.com/queritylib/querity.git</connection>
    <developerConnection>scm:git:https://github.com/queritylib/querity.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/queritylib/querity/actions</url>
  </ciManagement>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <spring-boot.version>4.0.1</spring-boot.version>
    <lombok.version>1.18.42</lombok.version>
    <commons-lang3.version>3.20.0</commons-lang3.version>
    <reflections.version>0.10.2</reflections.version>

    <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
    <maven-failsafe-plugin.version>3.5.4</maven-failsafe-plugin.version>
    <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
    <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
    <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
    <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
    <maven-release-plugin.version>3.3.1</maven-release-plugin.version>
    <central-publishing-maven-plugin.version>0.9.0</central-publishing-maven-plugin.version>

    <sonar.projectName>Querity</sonar.projectName>
    <sonar.organization>queritylib</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.exclusions>querity-test/**,querity-jpa-common-test/**</sonar.exclusions>
  </properties>

  <modules>
    <module>querity-api</module>
    <module>querity-jpa-common</module>
    <module>querity-jpa-common-test</module>
    <module>querity-jpa</module>
    <module>querity-spring-data-jpa</module>
    <module>querity-spring-data-elasticsearch</module>
    <module>querity-spring-data-mongodb</module>
    <module>querity-test</module>
    <module>querity-spring-web</module>
    <module>querity-common</module>
    <module>querity-parser</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.github.queritylib</groupId>
        <artifactId>querity-api</artifactId>
        <version>3.5.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>io.github.queritylib</groupId>
        <artifactId>querity-common</artifactId>
        <version>3.5.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>io.github.queritylib</groupId>
        <artifactId>querity-jpa-common</artifactId>
        <version>3.5.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>io.github.queritylib</groupId>
        <artifactId>querity-jpa-common-test</artifactId>
        <version>3.5.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>io.github.queritylib</groupId>
        <artifactId>querity-parser</artifactId>
        <version>3.5.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>io.github.queritylib</groupId>
        <artifactId>querity-test</artifactId>
        <version>3.5.1-SNAPSHOT</version>
      </dependency>

      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.reflections</groupId>
        <artifactId>reflections</artifactId>
        <version>${reflections.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <configuration>
          <excludes>
            <exclude>**/QueryLexer.*</exclude>
            <exclude>**/QueryParser.*</exclude>
            <exclude>**/QueryParser$*</exclude>
            <exclude>**/QueryParserBaseListener.*</exclude>
            <exclude>**/QueryParserBaseVisitor.*</exclude>
            <exclude>**/QueryParserListener.*</exclude>
            <exclude>**/QueryParserVisitor.*</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
          <execution>
            <id>jacoco-check</id>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <rules>
                <rule>
                  <element>CLASS</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <value>COVEREDRATIO</value>
                      <minimum>0.80</minimum>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <configuration>
          <doclint>all,-missing</doclint>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>${maven-release-plugin.version}</version>
        <configuration>
          <tagNameFormat>v@{project.version}</tagNameFormat>
          <resume>false</resume>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>deploy-central</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${maven-gpg-plugin.version}</version>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>${central-publishing-maven-plugin.version}</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
              <autoPublish>true</autoPublish>
              <waitUntil>published</waitUntil>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>deploy-github</id>
      <distributionManagement>
        <repository>
          <id>github</id>
          <name>GitHub Packages</name>
          <url>https://maven.pkg.github.com/queritylib/querity</url>
        </repository>
      </distributionManagement>
    </profile>
  </profiles>
</project>
